style(app): 统一格式和注释风格，优化代码结构
- 统一Java代码中注释风格为JavaDoc格式，提升代码可读性
- 优化了部分Java方法注释，补充缺失注释内容
- 调整了前端Vue组件的格式，规范了标签自闭合及内联样式
- 统一了TypeScript文件的导入语句格式，保持代码整洁
- 移除不必要的空行和多余的空格，增强代码一致性
- 规范了Java序列化类的serialVersionUID声明和注释
- 格式化了配置类属性及内部静态类，更加规范和易于维护
- 维护了中间件和store文件的代码风格，优化缩进和注释
- 前端调用接口和消息提示加入了await，保证异步效果
- 保留了业务逻辑无改动，仅提升代码风格和规范水平